--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "node-telegram-bot-api": "^0.66.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.13.3",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "telegraf": "^4.16.3"
   }
 }
